mengubah warnah tombol menjadi hitam

--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ html {
   padding: 1rem 3rem;
   font-size: 1.7rem;
   color: #fff;
-  background-color: var(--primary);
+  background-color: var(--bg);
   cursor: pointer;
 }
 
